examples/negative/silent_contract/impl_missing_required_method.kai
# Silent contract (#520 audit, category 4 / protocols): an
# `impl P for Box` block provides only one of the two methods
# `P` requires (`foo` is provided, `bar` is omitted). The
# dispatch resolver should reject the impl as incomplete; today
# kaikai compiles silently and runtime dispatch on `bar(Box(_))`
# would be a hole.
#
# See examples/negative/silent_contract/README.md for follow-up.

protocol P {
  foo(x: Self) : Int
  bar(x: Self) : Int
}

type Box = Box(Int)

impl P for Box {
  fn foo(b: Box) : Int = match b { Box(n) -> n }
}

fn main() : Int = foo(Box(1))
